# soljack

./: .gitignore  CODE_QUALITY_IMPROVEMENT_TASKS.md  LICENSE  RALPH_LOOP_FINAL_REPORT.md  README.md  README_RALPH_LOOP.md  claude-code-haiku.sh  netlify.toml  package-lock.json  package.json  start-app.sh
backend/: .env.example  package-lock.json  package.json
backend/src/: cache.ts  config.ts  index.ts  indexer.ts  websocket.ts
backend/src/routes/: index.ts  leaderboard.ts  player.ts  stats.ts  tables.ts
docs/: ANALYSIS_REPORT.md  API.md  ARCHITECTURE_AND_BUILD.md  CHANGELOG_RALPH.md  CODE_SWEEP_REPORT.md  CURRENT_STATE_ASSESSMENT.md  DEPLOYMENT.md  GAME_RULES.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  NEXT_ITERATION_GUIDE.md  SMART_CONTRACTS.md  TESTING.md
frontend/: .env.example  .env.production  .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BetTierNav.tsx  Header.tsx  HomePage.tsx  HowItWorks.tsx  LeaderboardDropdown.tsx  Lobby.tsx  ProfileModal.tsx  Stats.tsx  Table.tsx  TableSimple.tsx  UsernameModal.tsx
frontend/src/components/.claude/: ralph-loop.local.md
frontend/src/context/: GameContext.tsx
frontend/src/lib/: anchor.ts
frontend/src/lib/idl/: soljack_game.json  username_registry.json
programs/: Anchor.toml  Cargo.toml
programs/soljack-game/: Cargo.toml
programs/soljack-game/src/: lib.rs
programs/username-registry/: Cargo.toml
programs/username-registry/src/: lib.rs
