[package]
name = "soljack-game"
version = "0.1.0"
description = "SolJack game program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soljack_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = "1.16"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"